--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,5 +1,12 @@
 <h1><%= @cocktail.name %></h1>
 
+<% @cocktail.doses.each do |dose| %>
+    <%= dose.ingredient.name %>
+    <%= dose.description %>
+    <%= link_to 'Delete', dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } %>
+<% end %>
 
 
+
+<p><%= link_to 'Add a new dose', new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %></p>
 <p><%= link_to 'Go back to list', cocktails_path, class: "btn btn-primary" %></p>
