--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @cocktail.name %></h1>
+<%= cl_image_tag @article.photo, height: 300, width: 400, crop: :fill %>
 
 <% @cocktail.doses.each do |dose| %>
     <%= dose.ingredient.name %>
